# pythra-0.0.1

./: .gitignore  DROP.PY  MyVirtualListApp.spec  README.md  WARP.md  cli.py  cmd  commit_message.txt  config.yaml  dropdown.py  field.py  main.py  marktest.py  media_scanner.py  n_state.py  path.py  player.py  pt  rd.py  requirements.txt  requirements_cli.txt  requirements_packages.txt  scroll.py  setup.py  song_utils.py  state.py  test.py  test_state_update.py  util.py  v_list.py  v_list.spec
components/: control.py  drawer.py  home.py  music_list.py  search_field.py  tab_controller.py
framework/: __init__.py  base.py  core.py  reconciler.py  state.py  styles.py  widgets.py
lib/: main.py
pythra/: __init__.py  ani.py  api.py  base.py  base_widgets.cpp  base_widgets.pxd  base_widgets.pyx  class_list.py  config.py  controllers.py  core.py  drawing.py  events.py  fast_diff.cp313-win_amd64.pyd  fast_diff.pxd  fast_diff.pyx  fast_diff_engine.cp313-win_amd64.pyd  fast_diff_engine.cpp  fast_diff_engine.pyx  icons.py  icons_depe.py  navigation.py  package_manager.py  package_security.py  package_system.py  reconciler.py  rust_reconciler_adapter.py  server.py  state.py  styles.py  test_reconciliation.py  widgets.py  widgets_more.py
pythra.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pythra/Reconciler_C/: CMakeLists.txt  main.cpp
pythra/Reconciler_C/framework/: reconciler.cpp  reconciler.h  widget.h
pythra/Reconciler_C/widgets/: concrete_widgets.h
pythra_cli/: main.py
render/: index.html
test_dir/: nuitka-crash-report.xml  v_list.py
(+41 files in other folders)
